// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`semantic game-view renderers > renders a discovered dead end without moving the current marker 1`] = `
{
  "numeric": [
    [
      18,
      15,
      7,
      21,
      5,
      0,
      12,
      27,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      13,
      1,
      16,
      0,
      0,
      0,
      0,
    ],
    [
      8,
      16,
      30,
      59,
      30,
      0,
      69,
      69,
      69,
      69,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      16,
      29,
      0,
      4,
      29,
      0,
      19,
      31,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      12,
      21,
      3,
      11,
      0,
      31,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      18,
      13,
      27,
      0,
      9,
      20,
      5,
      13,
      50,
      8,
      0,
      0,
      65,
      60,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      27,
      14,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      66,
      38,
      63,
      24,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  ],
  "readable": [
    "ROGUE·L1·······MAP····",
    "HP4/4·wwww············",
    "P3·D3·S5··············",
    "LUCK·5················",
    "RM1·ITEM:H··y?········",
    "1N··········g@rX······",
  ],
}
`;

exports[`semantic game-view renderers > renders actual opposed-roll scaffolds and results on both shells 1`] = `
{
  "numeric": [
    [
      23,
      9,
      26,
      1,
      18,
      4,
      0,
      19,
      29,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      4,
      32,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      19,
      11,
      5,
      12,
      5,
      20,
      15,
      14,
      0,
      11,
      14,
      9,
      7,
      8,
      20,
      0,
      19,
      28,
      0,
      0,
      0,
      0,
    ],
    [
      4,
      32,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  ],
  "readable": [
    "WIZARD·S3·············",
    "D6····················",
    "SKELETON·KNIGHT·S2····",
    "D6····················",
    "······················",
    "······················",
  ],
}
`;

exports[`semantic game-view renderers > renders actual opposed-roll scaffolds and results on both shells 2`] = `
{
  "numeric": [
    [
      23,
      9,
      26,
      1,
      18,
      4,
      0,
      19,
      29,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      4,
      32,
      0,
      69,
      69,
      69,
      69,
      0,
      30,
      46,
      29,
      48,
      33,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      19,
      11,
      5,
      12,
      5,
      20,
      15,
      14,
      0,
      11,
      14,
      9,
      7,
      8,
      20,
      0,
      19,
      28,
      0,
      0,
      0,
      0,
    ],
    [
      4,
      32,
      0,
      69,
      69,
      69,
      69,
      0,
      31,
      46,
      28,
      48,
      33,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      6,
      9,
      18,
      19,
      20,
      50,
      0,
      23,
      9,
      26,
      1,
      18,
      4,
      0,
      0,
      0,
      0,
      0,
    ],
  ],
  "readable": [
    "WIZARD·S3·············",
    "D6·wwww·4+3=7·········",
    "SKELETON·KNIGHT·S2····",
    "D6·wwww·5+2=7·········",
    "······················",
    "····FIRST:·WIZARD·····",
  ],
}
`;

exports[`semantic game-view renderers > renders actual opposed-roll scaffolds and results on both shells 3`] = `
{
  "numeric": [
    [
      23,
      9,
      26,
      1,
      18,
      4,
      0,
      19,
      29,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      4,
      32,
      0,
      70,
      70,
      70,
      70,
      0,
      30,
      46,
      29,
      48,
      33,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      19,
      11,
      5,
      12,
      5,
      20,
      15,
      14,
      0,
      11,
      14,
      9,
      7,
      8,
      20,
      0,
      19,
      28,
      0,
      0,
      0,
      0,
    ],
    [
      4,
      32,
      0,
      70,
      70,
      70,
      70,
      0,
      31,
      46,
      28,
      48,
      33,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      6,
      9,
      18,
      19,
      20,
      50,
      0,
      23,
      9,
      26,
      1,
      18,
      4,
      0,
      0,
      0,
      0,
      0,
    ],
  ],
  "readable": [
    "WIZARD·S3·············",
    "D6·kkkk·4+3=7·········",
    "SKELETON·KNIGHT·S2····",
    "D6·kkkk·5+2=7·········",
    "······················",
    "····FIRST:·WIZARD·····",
  ],
}
`;

exports[`semantic game-view renderers > renders class selection with numbered choices and provisional values 1`] = `
{
  "numeric": [
    [
      3,
      8,
      15,
      15,
      19,
      5,
      0,
      0,
      8,
      16,
      0,
      16,
      0,
      4,
      0,
      19,
      0,
      12,
      0,
      0,
      0,
      0,
    ],
    [
      27,
      0,
      23,
      1,
      18,
      18,
      9,
      15,
      18,
      0,
      0,
      31,
      0,
      31,
      0,
      30,
      0,
      28,
      0,
      28,
      0,
      0,
    ],
    [
      28,
      0,
      18,
      15,
      7,
      21,
      5,
      0,
      0,
      0,
      0,
      30,
      0,
      29,
      0,
      29,
      0,
      31,
      0,
      31,
      0,
      0,
    ],
    [
      29,
      0,
      23,
      9,
      26,
      1,
      18,
      4,
      0,
      0,
      0,
      29,
      0,
      31,
      0,
      28,
      0,
      29,
      0,
      30,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      19,
      20,
      1,
      18,
      20,
      9,
      14,
      7,
      0,
      22,
      1,
      12,
      21,
      5,
      19,
      0,
      0,
      0,
      0,
    ],
  ],
  "readable": [
    "CHOOSE··HP·P·D·S·L····",
    "1·WARRIOR··5·5·4·2·2··",
    "2·ROGUE····4·3·3·5·5··",
    "3·WIZARD···3·5·2·3·4··",
    "······················",
    "···STARTING·VALUES····",
  ],
}
`;

exports[`semantic game-view renderers > renders the live combat menu with both HP bars and legal actions 1`] = `
{
  "numeric": [
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      7,
      8,
      15,
      21,
      12,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      8,
      16,
      28,
      59,
      28,
      0,
      69,
      69,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      23,
      1,
      18,
      18,
      9,
      15,
      18,
      0,
      12,
      28,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      8,
      16,
      31,
      59,
      31,
      0,
      69,
      69,
      69,
      69,
      69,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      27,
      0,
      1,
      20,
      20,
      1,
      3,
      11,
      0,
      0,
      0,
      28,
      0,
      19,
      13,
      1,
      19,
      8,
      0,
      0,
      0,
      0,
    ],
    [
      29,
      0,
      18,
      21,
      14,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  ],
  "readable": [
    "········GHOUL·········",
    "·····HP2/2·ww·········",
    "······WARRIOR·L2······",
    "·····HP5/5·wwwww······",
    "1·ATTACK···2·SMASH····",
    "3·RUN·················",
  ],
}
`;

exports[`semantic game-view renderers > renders the live combat menu with both HP bars and legal actions 2`] = `
{
  "numeric": [
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      7,
      8,
      15,
      21,
      12,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      8,
      16,
      28,
      59,
      28,
      0,
      70,
      70,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      23,
      1,
      18,
      18,
      9,
      15,
      18,
      0,
      12,
      28,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      8,
      16,
      31,
      59,
      31,
      0,
      70,
      70,
      70,
      70,
      70,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      27,
      0,
      1,
      20,
      20,
      1,
      3,
      11,
      0,
      0,
      0,
      28,
      0,
      19,
      13,
      1,
      19,
      8,
      0,
      0,
      0,
      0,
    ],
    [
      29,
      0,
      18,
      21,
      14,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  ],
  "readable": [
    "········GHOUL·········",
    "·····HP2/2·kk·········",
    "······WARRIOR·L2······",
    "·····HP5/5·kkkkk······",
    "1·ATTACK···2·SMASH····",
    "3·RUN·················",
  ],
}
`;

exports[`semantic game-view renderers > renders the live exploration HUD on black and white shells 1`] = `
{
  "numeric": [
    [
      23,
      1,
      18,
      18,
      9,
      15,
      18,
      0,
      12,
      27,
      0,
      0,
      0,
      0,
      0,
      13,
      1,
      16,
      0,
      0,
      0,
      0,
    ],
    [
      8,
      16,
      31,
      59,
      31,
      0,
      69,
      69,
      69,
      69,
      69,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      16,
      31,
      0,
      4,
      30,
      0,
      19,
      28,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      12,
      21,
      3,
      11,
      0,
      28,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      18,
      13,
      27,
      0,
      9,
      20,
      5,
      13,
      50,
      8,
      0,
      0,
      65,
      60,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      27,
      14,
      0,
      28,
      5,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      66,
      38,
      65,
      60,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  ],
  "readable": [
    "WARRIOR·L1·····MAP····",
    "HP5/5·wwwww···········",
    "P5·D4·S2··············",
    "LUCK·2················",
    "RM1·ITEM:H··y?········",
    "1N·2E·······g@y?······",
  ],
}
`;

exports[`semantic game-view renderers > renders the live exploration HUD on black and white shells 2`] = `
{
  "numeric": [
    [
      23,
      1,
      18,
      18,
      9,
      15,
      18,
      0,
      12,
      27,
      0,
      0,
      0,
      0,
      0,
      13,
      1,
      16,
      0,
      0,
      0,
      0,
    ],
    [
      8,
      16,
      31,
      59,
      31,
      0,
      70,
      70,
      70,
      70,
      70,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      16,
      31,
      0,
      4,
      30,
      0,
      19,
      28,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      12,
      21,
      3,
      11,
      0,
      28,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      18,
      13,
      27,
      0,
      9,
      20,
      5,
      13,
      50,
      8,
      0,
      0,
      65,
      60,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      27,
      14,
      0,
      28,
      5,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      66,
      38,
      65,
      60,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  ],
  "readable": [
    "WARRIOR·L1·····MAP····",
    "HP5/5·kkkkk···········",
    "P5·D4·S2··············",
    "LUCK·2················",
    "RM1·ITEM:H··y?········",
    "1N·2E·······g@y?······",
  ],
}
`;

exports[`semantic game-view renderers > renders the non-actionable title presentation exactly 1`] = `
{
  "numeric": [
    [
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      22,
      5,
      19,
      20,
      1,
      17,
      21,
      5,
      19,
      20,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      1,
      0,
      22,
      5,
      19,
      20,
      1,
      2,
      15,
      1,
      18,
      4,
      0,
      18,
      16,
      7,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
    ],
  ],
  "readable": [
    "wwwwwwwwwwwwwwwwwwwwww",
    "······················",
    "······VESTAQUEST······",
    "···A·VESTABOARD·RPG···",
    "······················",
    "wwwwwwwwwwwwwwwwwwwwww",
  ],
}
`;

exports[`semantic game-view renderers > renders the provisional exit outcome after the hidden room is found 1`] = `
{
  "numeric": [
    [
      0,
      0,
      0,
      0,
      0,
      25,
      15,
      21,
      0,
      5,
      19,
      3,
      1,
      16,
      5,
      4,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      3,
      12,
      1,
      19,
      19,
      50,
      0,
      23,
      1,
      18,
      18,
      9,
      15,
      18,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      18,
      15,
      15,
      13,
      19,
      0,
      6,
      15,
      21,
      14,
      4,
      50,
      0,
      34,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      5,
      14,
      5,
      13,
      9,
      5,
      19,
      0,
      19,
      12,
      1,
      9,
      14,
      50,
      0,
      29,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      5,
      24,
      9,
      20,
      0,
      3,
      8,
      1,
      12,
      12,
      5,
      14,
      7,
      5,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      1,
      18,
      18,
      9,
      22,
      5,
      19,
      0,
      9,
      14,
      0,
      19,
      12,
      9,
      3,
      5,
      0,
      34,
      0,
      0,
      0,
      0,
    ],
  ],
  "readable": [
    "·····YOU·ESCAPED······",
    "CLASS:·WARRIOR········",
    "ROOMS·FOUND:·8········",
    "ENEMIES·SLAIN:·3······",
    "EXIT·CHALLENGE········",
    "ARRIVES·IN·SLICE·8····",
  ],
}
`;
